Claude Code: Migrate addressList to AG-Grid-Table and prepare multi selection